# term_chess

./: CMakeLists.txt  LICENSE  README.md  ROADMAP.md  main.c  ui.c  ui.h
